// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCloseButton should render correctly 1`] = `
<button
  aria-label="Close"
  className="bpk-close-button"
  onClick={[Function]}
  title="Close"
  type="button"
>
  <svg
    className="bpk-close-button__icon"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
    />
  </svg>
</button>
`;

exports[`BpkCloseButton should render correctly with a custom className 1`] = `
<button
  aria-label="Close"
  className="bpk-close-button my-custom-classname"
  onClick={[Function]}
  title="Close"
  type="button"
>
  <svg
    className="bpk-close-button__icon"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
    />
  </svg>
</button>
`;

exports[`BpkCloseButton should render correctly with a custom icon 1`] = `
<button
  aria-label="Close"
  className="bpk-close-button"
  onClick={[Function]}
  title="Close"
  type="button"
>
  <BpkIcon
    className="bpk-close-button__icon"
  />
</button>
`;
